host event details page image overflow fix

--- a/client/styles/modules/_event-details.less
+++ b/client/styles/modules/_event-details.less
@@ -7,10 +7,10 @@
 }
 
 .content__container {
+  overflow: hidden;
   margin: 0 5%;
   background-color: #fff;
-  border: 1px solid @border-color;
-  padding: 20px;
+  border: 20px solid #fff;
   word-wrap: break-word;
   h3 {
     margin-top: 0px;
